quick fix vertical alignment of attribute-key values

--- a/frontend/src/global_styles/content/_attributes_key_value.sass
+++ b/frontend/src/global_styles/content/_attributes_key_value.sass
@@ -37,6 +37,8 @@
   min-width: calc(50% - 3rem)
   max-width: calc(100% - 3rem)
   margin: 0 1.5rem
+  line-height: 1.5em
+  gap: 10px
 
   &--key
     @extend .form--label
@@ -61,7 +63,6 @@
     flex-basis: 260px
     flex-grow: 1000000
     flex-shrink: 1
-    align-self: center
     margin-bottom: 0.1875rem
     padding: 0.375rem 0
     height: 100%
